# oppia-android

./: .bazelproject  .bazelrc  .editorconfig  .gitignore  Accessibility-(A11y)-Guide.md  Android-Studio-UI-based-Github-workflow.md  AndroidManifest.xml  BUILD.bazel  Background-Concurrent-processing-in-Android---DataProviders-&-Coroutines.md  Background-Processing.md  Bazel-Setup-Instructions-for-Windows.md  Before-After-you-submit-a-PR.md  Buf-Guide.md  Coding-style-guide.md  Contributing-to-Oppia-Android.md  Contributing-to-Oppia-android.md  Creating-a-screenshot.md  Dark-Mode.md  DataProvider-&-LiveData.md  Dependency-Injection.md  Developing-Oppia-Android.md  End-to-End-Testing-Guide.md  End-to-End-testing.md  Firebase-Console-Guide.md  Fork-and-Clone-Oppia-Android.md  Frequent-Errors-and-Solutions.md  Get-Help.md  Gradle--Bazel-Migration-Best-Practices-and-FAQ.md  Guidance-on-submitting-a-PR.md  Home.md  Installing-Oppia-Android.md  Instructions-for-making-a-code-change.md  Internationalization.md  Interpreting-CI-Results.md  Kotlin-Coroutines.md  Ktlint-Guide.md  Oppia-Android-Testing.md  Oppia-Bazel-Guide.md  Oppia-Bazel-Setup-Instructions.md  Overview-of-the-Oppia-Android-Testing.md  (+49 more)
app/: AndroidManifest.xml  BUILD  BUILD.bazel  app_test.bzl  build.gradle  fake_script_assets.bzl  google-services.json  jacoco.exec  proguard-multidex-rules.pro  test_with_resources.bzl
app/assets/: maven_dependencies.textproto  second_script.pb  second_script.textproto  second_script.txt
app/src/main/: AndroidManifest.xml  AndroidManifest_BACKUP_29327.xml  AndroidManifest_LOCAL_29327.xml  AndroidManifest_REMOTE_29327.xml  AppAndroidManifest.xml  BUILD  DatabindingAdaptersManifest.xml  DatabindingResourcesManifest.xml  DbAdaptersAndroidManifest.xml  DbAndroidManifest.xml  RecyclerviewAdaptersManifest.xml  RvAdaptersAndroidManifest.xml  ViewModelManifest.xml  ViewModelsManifest.xml  ViewsAndroidManifest.xml  ViewsManifest.xml
app/src/main/assets/: currencyunits.json
app/src/main/proto/: test.proto
app/src/main/res/: profile_chooser_test_activity.xml
app/src/test/: AndroidManifest.xml
app/src/test/java/: DataBinderMapperImpl.java
app/src/test/resources/: robolectric.properties
config/proguard/: BUILD.bazel  android-proguard-rules.pro  androidx-proguard-rules.pro  firebase-components-proguard-rules.pro  glide-proguard-rules.pro  google-play-services-proguard-rules.pro  guava-proguard-rules.pro  kotlin-proguard-rules.pro  kotlinpoet-javapoet-proguard-rules.pro  material-proguard-rules.pro  moshi-proguard-rules.pro  okhttp-proguard-rules.pro  oppia-prod-proguard-rules.pro  protobuf-proguard-rules.pro
data/: BUILD  BUILD.bazel  build.gradle  data_test.bzl
data/libs/: kotlitex-release.aar
data/src/main/: AndroidManifest.xml  BUILD
data/src/test/: AndroidManifest.xml
data/src/test/resources/: robolectric.properties
domain/: BUILD.bazel  build.gradle  domain_assets.bzl  domain_test.bzl  jacoco.exec
domain/src/main/: AndroidManifest.xml  BUILD  BUILD.bazel
domain/src/main/assets/: 13.json  13.textproto  1904tpP0CYwY.json  2.json  2mzzFVDLuAj8.json  2mzzFVDLuAj8.textproto  4.json  5NWuolNcwH6e.json  5NWuolNcwH6e.textproto  5RM9KPfQxobH.json  6.json  9.json  B39yK4cbHZYI.json  C4fqwrvqWpRm.json  C4fqwrvqWpRm_1.json  C4fqwrvqWpRm_2.json  C4fqwrvqWpRm_3.json  C4fqwrvqWpRm_4.json  GJ2rLXRKD5hw.json  GJ2rLXRKD5hw.textproto  (+173 more)
domain/src/test/: AndroidManifest.xml  TestManifest.xml
firebase/: BUILD.bazel
instrumentation/: AndroidManifest.xml  BUILD.bazel  oppia_instrumentation_test.bzl  tests.bzl
instrumentation/src/: AndroidManifest.xml
instrumentation/src/java/: AndroidManifest.xml
instrumentation/src/javatest/: AndroidManifest.xml
instrumentation/src/javatests/: AndroidManifest.xml
model/: BUILD  BUILD.bazel  build.gradle  oppia_proto_library.bzl  text_proto_assets.bzl
scripts/: BUILD.bazel  buf_download.sh  buf_lint_check.sh  buf_m1_mac_setup.sh  buildifier_download.sh  buildifier_lint_check.sh  checkstyle_download.sh  checkstyle_lint_check.sh  checkstyle_lint_check_github_action.sh  compute_affected_tests.sh  copy_dummy_assets.sh  copy_oppia_assets.sh  create_avd.sh  download_checkstyle.sh  feature_flags_check.sh  feature_flags_logger_check.sh  formatting.sh  generate-authors.kts  kotlin-lint-check  kotlin-lint-check.sh  ktlint-pre-commit  ktlint_download.sh  ktlint_lint_check.sh  pre-commit  pre-commit.sh  pre-push  pre-push.sh  pull_for_test.sh  pull_goldens.sh  run-bazel-buildifier.sh  run_emulator_tests.sh  script_assets.bzl  setup.py  setup.sh  setup_deps.sh  static_checks.sh  wait_for_emulator.sh
scripts/assets/: accessibility_label_exemptions.textproto  device_hardware_profiles.textproto  file_content_validation_checks.textproto  filename_pattern_validation_checks.textproto  kdoc_exemptions.textproto  kdoc_validity_exemptions.textproto  maven_dependencies.textproto  screen_name_presence_validation_checks.textproto  test_file_exemptions.textproto  todo_exemptions.textproto  todo_open_exemptions.textproto
scripts/maven/: BUILD.bazel  BackupDependency.kt  Dependencies.kt  Dependency.kt  DependencyTree.kt  License.kt  MavenDependency.kt  MavenScriptTest.kt  SpecialDependency.kt  backup_license_links.json  maven_dependencies_list.kts
scripts/maven/test/: MavenScriptTest.kt
testing/: BUILD.bazel  build.gradle  jacoco.exec  testing_test.bzl
testing/src/main/: AndroidManifest.xml
testing/src/test/: AndroidManifest.xml  BUILD.bazel  TestManifest.xml
tools/: BUILD.bazel  toolchains.bzl
tools/android/: BUILD.bazel  setup.bzl
tools/java/: setup.bzl
tools/kotlin/: BUILD.bazel  add_kotlinc_optin_support.patch  remove_processor_duplicates.patch  setup.bzl
tools/proto/: setup.bzl
tools/robolectric/: BUILD.bazel  setup.bzl
tools/skylib/: BUILD.bazel  setup.bzl
tools/tools_android/: BUILD.bazel  setup.bzl
utility/: BUILD  BUILD.bazel  build.gradle  google-services.json  jacoco.exec  utility_test.bzl
utility/src/main/: AndroidManifest.xml  BUILD  BUILD.bazel
utility/src/test/: AndroidManifest.xml  BUILD.bazel  TestManifest.xml
(+10484 files in other folders)
